adding info section and styling it

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/2c36f090bc.js" crossorigin="anonymous"></script>
     <title>Assignment1</title>
 </head>
 <body>
@@ -24,7 +25,25 @@
     </header>
     <!-------------Main Section------------->
     <main class="main">
-
+        <!-------------my info---------------->
+        <section class="my-info">
+            <div class="my-info-content">
+                <div class="my-info-con-pic">
+                    <img src="./images/person.png" alt="">
+                </div>
+                <div class="my-info-con-title">
+                    <h2 class="my-info-h">My failures of <br> previous year</h2>
+                    <p class="my-info-p">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                    
+                    <!------------>
+                    <p class="my-info-p"><img src="./images/icons/check-solid.svg" alt=""> Contrary to popular belief, is not simply.</p>
+                    <p class="my-info-p"><img src="./images/icons/check-solid.svg" alt="">Contrary to popular belief.</p>
+                    <p class="my-info-p"><img src="./images/icons/check-solid.svg" alt="">Contrary to popular , is not simply.</p>
+                    <p class="my-info-p"><img src="./images/icons/check-solid.svg" alt="">Contrary to popular belief, is not simply.</p>
+                    <p class="my-info-p"><img src="./images/icons/check-solid.svg" alt="">Contrary to popular simply.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <!-----------Footer section----------->
     <footer class="footer">
