adding and styling rest of the website content

--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@
                 <div class="my-info-con-title">
                     <h2 class="my-info-h">My failures of <br> previous year</h2>
                     <p class="my-info-p">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
-                    
-                    <!------------>
                     <p class="my-info-p"><img src="./images/icons/check-solid.svg" alt=""> Contrary to popular belief, is not simply.</p>
                     <p class="my-info-p"><img src="./images/icons/check-solid.svg" alt="">Contrary to popular belief.</p>
                     <p class="my-info-p"><img src="./images/icons/check-solid.svg" alt="">Contrary to popular , is not simply.</p>
@@ -44,10 +42,63 @@
                 </div>
             </div>
         </section>
+
+        <!-------------My Plan Section--------------->
+        <section class="my-plan">
+            <h2 class="my-plan-h">My Plans</h2>
+            <div class="my-plan-content">
+                <div class="my-plan-con-items">
+                    <img src="./images/icons/web.png" alt="">
+                    <h2 class="my-plan-con-h">Web Development</h2>
+                    <p class="my-plan-con-p">I want to start</p>
+                </div>
+                <div class="my-plan-con-items">
+                    <img src="./images/icons/js.png" alt="">
+                    <h2 class="my-plan-con-h">Javascript</h2>
+                    <p class="my-plan-con-p">I want to learn</p>
+                </div>
+                <div class="my-plan-con-items">
+                    <img src="./images/icons/smoke.png" alt="">
+                    <h2 class="my-plan-con-h">Smoking Habit</h2>
+                    <p class="my-plan-con-p">I want to end</p>
+                </div>
+                <div class="my-plan-con-items">
+                    <img src="./images/icons/ecom.png" alt="">
+                    <h2 class="my-plan-con-h">ecommerce</h2>
+                    <p class="my-plan-con-p">I Want To Develop</p>
+                </div>
+            </div>
+        </section>
+
+        <!--------------------gradient section ----------------->
+        <section class="overlay">
+            <div class="img-overlay">
+                <div class="img-content">
+                    <h2 class="img-ovr-h">Always keep a positive <br> mindset</h2>
+                    <button class="sec-btn">Call Now</button>
+                </div>
+            </div>
+        </section>
     </main>
     <!-----------Footer section----------->
-    <footer class="footer">
+   <footer>
+        <div class="footer-titles">
+            <h2 class="fot-title-h">Future</h2>
+            <p class="fot-title-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <p class="fot-title-p">Email : info@gmail.com</p>
+            <p class="fot-title-p">Phone : 01500 00 00 00</p>
+            <img src="./images/icons/fb.png" alt=""> 
+            <img src="./images/icons/youtube.png" alt="">
+            <img src="./images/icons/twitter.png" alt="">
+        </div>
 
-    </footer>
+        <div class="footer-items">
+            <h3 class="fot-items-h">Subscribe</h3>
+            <input class="mail" type="email" name="email" id="email" placeholder="Enter Your Mail">
+            <button class="sec-btn">subscribe</button>
+        </div>
+
+
+   </footer>
 </body>
 </html>
