adding and styling extra section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,24 @@
             </div>
         </section>
     </main>
+    <!------------extra sectiion-------------->
+    <section class="extra">
+        <div class="form-ex">
+            <h2 class="ext-title-h">Fill Up TO Get Update From Us</h2>
+            <form action="">
+                <label for="name">
+                    <input class="ex-in" placeholder="Enter Your Name" type="text" id="name">
+                </label><br><br>
+                <label for="email">
+                    <input class="ex-in" type="email" name="email" id="email" placeholder="Enter Your Email">
+                </label><br><br>
+                <label for="number">
+                    <input class="ex-in" type="number" name="number" id="Number" placeholder="Enter Your Phone Number">
+                </label><br><br><br>
+                <button class="pri-btn">Submit</button>
+            </form>
+        </div>
+    </section>
     <!-----------Footer section----------->
    <footer>
         <div class="footer-titles">
